Bug 1510601 - Part 2. Improve recycling of frames when an animation is reset. r=tnikkel

When an animation is reset, we can actually avoid the reallocations by
keeping the frames in the mRecycle and mDiscard queues. There is no real
need to do this. We just need to make sure the recycle rect calculation
is done appropriately, particularly when we haven't reached the end yet
and thus don't know the first frame refresh area yet.

Differential Revision: https://phabricator.services.mozilla.com/D13465